tests/ui/traits/next-solver/cycles/coinduction/item-bound-via-impl-where-clause.current.stderr
error[E0275]: overflow evaluating the requirement `Vec<u8>: Trait<String>`
  --> $DIR/item-bound-via-impl-where-clause.rs:31:21
   |
LL |     let s: String = transmute::<_, String>(vec![65_u8, 66, 67]);
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: required for `Vec<u8>` to implement `Trait<String>`
  --> $DIR/item-bound-via-impl-where-clause.rs:22:12
   |
LL | impl<L, R> Trait<R> for L
   |            ^^^^^^^^     ^
LL | where
LL |     L: Trait<R>,
   |        -------- unsatisfied trait bound introduced here
note: required by a bound in `transmute`
  --> $DIR/item-bound-via-impl-where-clause.rs:29:17
   |
LL | fn transmute<L: Trait<R>, R>(r: L) -> <L::Proof as Trait<R>>::Proof { r }
   |                 ^^^^^^^^ required by this bound in `transmute`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
